--- a/evaluacionescl/templates/evaluacionescl/sin_resultados_alumno.html
+++ b/evaluacionescl/templates/evaluacionescl/sin_resultados_alumno.html
@@ -51,7 +51,7 @@
         <a href="{% url 'dashboard_admin' %}">🏠 Inicio admin</a>
         <a href="{% url 'admin_resultados' %}">📊 Resultados globales</a>
         <a href="{% url 'admin_estadisticas' %}">📈 Estadísticas por alumno</a>
-        <a href="{% url 'logout_usuario' %}">🚪 Cerrar sesión</a>
+        <a href="{% url 'logout_admin' %}">🚪 Cerrar sesión</a>
     </div>
 </head>
 <body class="bg-light">
