--- a/evaluacionescl/templates/evaluacionescl/tabla_resultados.html
+++ b/evaluacionescl/templates/evaluacionescl/tabla_resultados.html
@@ -85,5 +85,8 @@
 <div class="mt-4 text-center">
     <a href="{% url 'seleccion_tipo_texto' %}" class="btn btn-success " style="background-color: #006d77;">📚 Elegir otro tipo de texto</a>
 </div>
+<div class="mt-4 text-center">
+    <a href="{% url 'dashboard_usuario' %}" class="btn btn-success " style="background-color: #013a63;"> ← Volver al inicio</a>
+</div>
 </body>
 </html>
